--- a/_includes/visit.html
+++ b/_includes/visit.html
@@ -17,7 +17,7 @@
                 محل روی نقشه:
             </h3>
             <!-- OSM Map -->
-            <iframe style="width:425; height:350; frameborder=0; scrolling:no; marginheight:0; marginwidth:0; max-eidth=100%" src="https://www.openstreetmap.org/export/embed.html?bbox=52.51605927944184%2C29.62672838265709%2C52.52053320407868%2C29.629698732092663&amp;layer=mapnik&amp;marker=29.62821604269458%2C52.518296241760254" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=29.62822&amp;mlon=52.51830#map=18/29.62821/52.51830">مشاهده روی نقشه بزرگ‌تر</a></small>
+            <iframe style="width:425; height:350; frameborder=0; scrolling:no; marginheight:0; marginwidth:0; max-width=100%" src="https://www.openstreetmap.org/export/embed.html?bbox=52.51605927944184%2C29.62672838265709%2C52.52053320407868%2C29.629698732092663&amp;layer=mapnik&amp;marker=29.62821604269458%2C52.518296241760254" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=29.62822&amp;mlon=52.51830#map=18/29.62821/52.51830">مشاهده روی نقشه بزرگ‌تر</a></small>
         </div>
     </div>
 </section>
